--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <title>Kaleb's Personal Website</title>
+<link rel="icon" href="/static/Me_Headshot.png" type="image/png">
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <link rel="stylesheet" href="index.css" />
@@ -32,9 +33,15 @@
                     <div class="hidden sm:ml-6 sm:block">
                         <div class="flex space-x-4">
                             <!-- Current: "bg-gray-900 text-white", Default: "text-gray-300 hover:bg-gray-700 hover:text-white" -->
-                            <div id="home-selector" hx-get="home.html" hx-target="#page" hx-trigger="load,click" class="rounded-md px-3 py-2 text-sm font-medium text-orange-300 hover:bg-gray-700 hover:text-white">Home</div>
-                            <div id="about-selector" hx-get="about.html" hx-target="#page" class="rounded-md px-3 py-2 text-sm font-medium text-gray-300 hover:bg-gray-700 hover:text-white">About</div>
-                            <div id="projects-selector" hx-get="projects.html" hx-target="#page" class="rounded-md px-3 py-2 text-sm font-medium text-gray-300 hover:bg-gray-700 hover:text-white">Projects</div>
+                            <div id="home-selector" hx-get="home.html" hx-target="#page" hx-trigger="load,click"
+                                class="rounded-md px-3 py-2 text-sm font-medium text-orange-300 hover:bg-gray-700 hover:text-white">
+                                Home</div>
+                            <div id="about-selector" hx-get="about.html" hx-target="#page"
+                                class="rounded-md px-3 py-2 text-sm font-medium text-gray-300 hover:bg-gray-700 hover:text-white">
+                                About</div>
+                            <div id="projects-selector" hx-get="projects.html" hx-target="#page"
+                                class="rounded-md px-3 py-2 text-sm font-medium text-gray-300 hover:bg-gray-700 hover:text-white">
+                                Projects</div>
                         </div>
                     </div>
                 </div>
@@ -47,7 +54,8 @@
                                 d="M32 6C17.641 6 6 17.641 6 32c0 12.277 8.512 22.56 19.955 25.286-.592-.141-1.179-.299-1.755-.479V50.85c0 0-.975.325-2.275.325-3.637 0-5.148-3.245-5.525-4.875-.229-.993-.827-1.934-1.469-2.509-.767-.684-1.126-.686-1.131-.92-.01-.491.658-.471.975-.471 1.625 0 2.857 1.729 3.429 2.623 1.417 2.207 2.938 2.577 3.721 2.577.975 0 1.817-.146 2.397-.426.268-1.888 1.108-3.57 2.478-4.774-6.097-1.219-10.4-4.716-10.4-10.4 0-2.928 1.175-5.619 3.133-7.792C19.333 23.641 19 22.494 19 20.625c0-1.235.086-2.751.65-4.225 0 0 3.708.026 7.205 3.338C28.469 19.268 30.196 19 32 19s3.531.268 5.145.738c3.497-3.312 7.205-3.338 7.205-3.338.567 1.474.65 2.99.65 4.225 0 2.015-.268 3.19-.432 3.697C46.466 26.475 47.6 29.124 47.6 32c0 5.684-4.303 9.181-10.4 10.4 1.628 1.43 2.6 3.513 2.6 5.85v8.557c-.576.181-1.162.338-1.755.479C49.488 54.56 58 44.277 58 32 58 17.641 46.359 6 32 6zM33.813 57.93C33.214 57.972 32.61 58 32 58 32.61 58 33.213 57.971 33.813 57.93zM37.786 57.346c-1.164.265-2.357.451-3.575.554C35.429 57.797 36.622 57.61 37.786 57.346zM32 58c-.61 0-1.214-.028-1.813-.07C30.787 57.971 31.39 58 32 58zM29.788 57.9c-1.217-.103-2.411-.289-3.574-.554C27.378 57.61 28.571 57.797 29.788 57.9z" />
                         </svg>
                     </a>
-                    <a href="https://www.linkedin.com/in/kaleb-dickerson2023/" class="bg-gray-300 hover:bg-gray-400 rounded">
+                    <a href="https://www.linkedin.com/in/kaleb-dickerson2023/"
+                        class="bg-gray-300 hover:bg-gray-400 rounded">
                         <svg class="w-7 h-7" xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="100" height="100"
                             viewBox="0 0 48 48">
                             <path fill="#0288D1"
@@ -80,96 +88,96 @@
 
     <div id="page" class="flex flex-col w-full bg-gradient-to-b from-gray-800 to-black"></div>
 
-        <!-- <div class="flex flex-col w-full"> -->
-            <!-- Home Section -->
-            <!-- <div id="home" class="flex flex-row justify-center h-screen bg-gradient-to-b from-gray-800 to-black "> -->
-            <!--     <div class="w-1/4 aspect-square flex flex-col items-center justify-center"> -->
-            <!--         <img class="rounded-full transition" src="static/Me_Headshot.png" alt="headshot picture" /> -->
-            <!--     </div> -->
-            <!--     <div class="flex flex-col gap-5 items-center justify-center p-32"> -->
-            <!--         <h1 class="flex justify-center text-6xl opacity-0 transition-opacity duration-1000 fade-in"><b>Kaleb -->
-            <!--                 Dickerson</b></h1> -->
-            <!--         <p class="flex justify-center opacity-0 transition-opacity duration-1000 fade-in">Sofware Engineer -->
-            <!--             at Apple in Austin, Texas</p> -->
-            <!--         <form class="flex justify-center" method="get" action="static/Kaleb_Dickerson_Resume.pdf"> -->
-            <!--             <button -->
-            <!--                 class="hover:animate-pulse bg-gray-300 hover:bg-gray-400 text-gray-800 font-bold py-2 px-4 rounded inline-flex items-center opacity-0 transition-opacity duration-1000 fade-in"> -->
-            <!--                 <!-1- <svg class="fill-current w-4 h-4 mr-2" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20"> -1-> -->
-            <!--                 <!-1-     <path d="M13 8V2H7v6H2l8 8 8-8h-5zM0 18h20v2H0v-2z" /> -1-> -->
-            <!--                 <!-1- </svg> -1-> -->
-            <!--                 <span>View Resume</span> -->
-            <!--             </button> -->
-            <!--         </form> -->
-            <!--     </div> -->
-            <!-- </div> -->
+    <!-- <div class="flex flex-col w-full"> -->
+    <!-- Home Section -->
+    <!-- <div id="home" class="flex flex-row justify-center h-screen bg-gradient-to-b from-gray-800 to-black "> -->
+    <!--     <div class="w-1/4 aspect-square flex flex-col items-center justify-center"> -->
+    <!--         <img class="rounded-full transition" src="static/Me_Headshot.png" alt="headshot picture" /> -->
+    <!--     </div> -->
+    <!--     <div class="flex flex-col gap-5 items-center justify-center p-32"> -->
+    <!--         <h1 class="flex justify-center text-6xl opacity-0 transition-opacity duration-1000 fade-in"><b>Kaleb -->
+    <!--                 Dickerson</b></h1> -->
+    <!--         <p class="flex justify-center opacity-0 transition-opacity duration-1000 fade-in">Sofware Engineer -->
+    <!--             at Apple in Austin, Texas</p> -->
+    <!--         <form class="flex justify-center" method="get" action="static/Kaleb_Dickerson_Resume.pdf"> -->
+    <!--             <button -->
+    <!--                 class="hover:animate-pulse bg-gray-300 hover:bg-gray-400 text-gray-800 font-bold py-2 px-4 rounded inline-flex items-center opacity-0 transition-opacity duration-1000 fade-in"> -->
+    <!--                 <!-1- <svg class="fill-current w-4 h-4 mr-2" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20"> -1-> -->
+    <!--                 <!-1-     <path d="M13 8V2H7v6H2l8 8 8-8h-5zM0 18h20v2H0v-2z" /> -1-> -->
+    <!--                 <!-1- </svg> -1-> -->
+    <!--                 <span>View Resume</span> -->
+    <!--             </button> -->
+    <!--         </form> -->
+    <!--     </div> -->
+    <!-- </div> -->
 
-            <!-- <!-1- About Section -1-> -->
-            <!-- <div id="about" class="min-h-screen bg-gray-900 flex flex-col items-center"> -->
-            <!--     <h2 class="text-3xl p-16">About</h2> -->
-            <!--     <hr class="my-4" /> -->
-            <!--     <p> -->
-            <!--         Hello! Welcome to my corner of the internet! I am currently an honors computer science student at -->
-            <!--         Texas -->
-            <!--         A&M -->
-            <!--         University set to graduate in 2023. I'm also a peer teacher and really enjoy helping others -->
-            <!--         understand -->
-            <!--         how to solve complex coding -->
-            <!--         problems. This past summer I completed an internship at IBM where I was working on IBM Cloud. I -->
-            <!--         gained a -->
-            <!--         lot of experience in cloud -->
-            <!--         models and arhitecture, as well as essential cloud technologies such as Docker and Kubernetes. Last -->
-            <!--         year -->
-            <!--         I competed in a hackathon where my -->
-            <!--         team won the "Judge's Choice" award. We developed a full stack web application using Django and -->
-            <!--         React -->
-            <!--         which detected the user's mood using -->
-            <!--         machine learning and played a song fitting that mood in the UI. You can check out the project <a -->
-            <!--             href="https://github.com/fool1280/howdy-hack-2021">here</a>. -->
-            <!--     </p> -->
-            <!--     <p> -->
-            <!--         Outside of school and work you can usually find me at the gym, I love weightlifting and staying fit! -->
-            <!--         I'm -->
-            <!--         also an avid fantasy -->
-            <!--         reader, if you've never heard of The Stormlight Archives series by Brandon Sanderson you're missing -->
-            <!--         out. -->
-            <!--     </p> -->
-            <!--     <p> -->
-            <!--         Please check out some of my other projects on <a -->
-            <!--             href="https://www.github.com/Prometheus1400">GitHub</a> -->
-            <!--         such as the tetris game I coded -->
-            <!--         in C++, or my deep learning model designed for the 2021 KDD Cup. Feel free to look at my resume and -->
-            <!--         contact me (email is probably -->
-            <!--         best). -->
-            <!--     </p> -->
-            <!-- </div> -->
-            <!-- <!-1- End About Section -1-> -->
+    <!-- <!-1- About Section -1-> -->
+    <!-- <div id="about" class="min-h-screen bg-gray-900 flex flex-col items-center"> -->
+    <!--     <h2 class="text-3xl p-16">About</h2> -->
+    <!--     <hr class="my-4" /> -->
+    <!--     <p> -->
+    <!--         Hello! Welcome to my corner of the internet! I am currently an honors computer science student at -->
+    <!--         Texas -->
+    <!--         A&M -->
+    <!--         University set to graduate in 2023. I'm also a peer teacher and really enjoy helping others -->
+    <!--         understand -->
+    <!--         how to solve complex coding -->
+    <!--         problems. This past summer I completed an internship at IBM where I was working on IBM Cloud. I -->
+    <!--         gained a -->
+    <!--         lot of experience in cloud -->
+    <!--         models and arhitecture, as well as essential cloud technologies such as Docker and Kubernetes. Last -->
+    <!--         year -->
+    <!--         I competed in a hackathon where my -->
+    <!--         team won the "Judge's Choice" award. We developed a full stack web application using Django and -->
+    <!--         React -->
+    <!--         which detected the user's mood using -->
+    <!--         machine learning and played a song fitting that mood in the UI. You can check out the project <a -->
+    <!--             href="https://github.com/fool1280/howdy-hack-2021">here</a>. -->
+    <!--     </p> -->
+    <!--     <p> -->
+    <!--         Outside of school and work you can usually find me at the gym, I love weightlifting and staying fit! -->
+    <!--         I'm -->
+    <!--         also an avid fantasy -->
+    <!--         reader, if you've never heard of The Stormlight Archives series by Brandon Sanderson you're missing -->
+    <!--         out. -->
+    <!--     </p> -->
+    <!--     <p> -->
+    <!--         Please check out some of my other projects on <a -->
+    <!--             href="https://www.github.com/Prometheus1400">GitHub</a> -->
+    <!--         such as the tetris game I coded -->
+    <!--         in C++, or my deep learning model designed for the 2021 KDD Cup. Feel free to look at my resume and -->
+    <!--         contact me (email is probably -->
+    <!--         best). -->
+    <!--     </p> -->
+    <!-- </div> -->
+    <!-- <!-1- End About Section -1-> -->
 
-            <!-- <!-1- Contact Section -1-> -->
-            <!-- <div class="w3-padding-32 w3-content w3-text-grey" id="contact" style="margin-bottom: 64px"> -->
-            <!--     <h2 class="text-2xl text-gray-500">Contact Me</h2> -->
-            <!--     <hr class="my-4" /> -->
-            <!--     <div class="w3-section"> -->
-            <!--         <p><i class="fa fa-map-marker fa-fw w3-xxlarge w3-margin-right"></i> Austin, TX</p> -->
-            <!--         <p><i class="fa fa-phone fa-fw w3-xxlarge w3-margin-right"></i> Phone: (512)-801-1561</p> -->
-            <!--         <p><i class="fa fa-envelope fa-fw w3-xxlarge w3-margin-right"> </i> Email: -->
-            <!--             kaleb.dickerson2001@tamu.edu -->
-            <!--         </p> -->
-            <!--         <p> -->
-            <!--             <i class="fa fa-linkedin fa-fw w3-xxlarge w3-margin-right"> </i>My -->
-            <!--             <a href="https://www.linkedin.com/in/kaleb-dickerson2023">LinkedIn</a> -->
-            <!--         </p> -->
-            <!--     </div> -->
-            <!-- </div> -->
-            <!-- <!-1- End Contact Section -1-> -->
+    <!-- <!-1- Contact Section -1-> -->
+    <!-- <div class="w3-padding-32 w3-content w3-text-grey" id="contact" style="margin-bottom: 64px"> -->
+    <!--     <h2 class="text-2xl text-gray-500">Contact Me</h2> -->
+    <!--     <hr class="my-4" /> -->
+    <!--     <div class="w3-section"> -->
+    <!--         <p><i class="fa fa-map-marker fa-fw w3-xxlarge w3-margin-right"></i> Austin, TX</p> -->
+    <!--         <p><i class="fa fa-phone fa-fw w3-xxlarge w3-margin-right"></i> Phone: (512)-801-1561</p> -->
+    <!--         <p><i class="fa fa-envelope fa-fw w3-xxlarge w3-margin-right"> </i> Email: -->
+    <!--             kaleb.dickerson2001@tamu.edu -->
+    <!--         </p> -->
+    <!--         <p> -->
+    <!--             <i class="fa fa-linkedin fa-fw w3-xxlarge w3-margin-right"> </i>My -->
+    <!--             <a href="https://www.linkedin.com/in/kaleb-dickerson2023">LinkedIn</a> -->
+    <!--         </p> -->
+    <!--     </div> -->
+    <!-- </div> -->
+    <!-- <!-1- End Contact Section -1-> -->
 
-            <!-- <!-1- Footer -1-> -->
-            <!-- <footer class="flex text-xs"> -->
-            <!--     <div class="flex justify-center"> -->
-            <!--         <p>last update 9/7/2022</p> -->
-            <!--     </div> -->
-            <!-- </footer> -->
+    <!-- <!-1- Footer -1-> -->
+    <!-- <footer class="flex text-xs"> -->
+    <!--     <div class="flex justify-center"> -->
+    <!--         <p>last update 9/7/2022</p> -->
+    <!--     </div> -->
+    <!-- </footer> -->
 
-        <!-- </div> -->
+    <!-- </div> -->
 </body>
 
 </html>
