--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                     San Francisco, California
                 </p>
                 <div class="mt-6 flex flex-wrap justify-center gap-3 sm:justify-start">
-                    <a href="static/Kaleb_Dickerson_Resume.pdf" target="_blank" class="inline-flex items-center gap-2 rounded-lg bg-ctp-mauve px-5 py-2.5 text-sm font-semibold text-ctp-crust hover:bg-ctp-pink">
+                    <a href="Kaleb_Dickerson_Resume.pdf" target="_blank" class="inline-flex items-center gap-2 rounded-lg bg-ctp-mauve px-5 py-2.5 text-sm font-semibold text-ctp-crust hover:bg-ctp-pink">
                         <svg class="h-4 w-4" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 10v6m0 0l-3-3m3 3l3-3m2 8H7a2 2 0 01-2-2V5a2 2 0 012-2h5.586a1 1 0 01.707.293l5.414 5.414a1 1 0 01.293.707V19a2 2 0 01-2 2z"/></svg>
                         Download Resume
                     </a>
